# QMeter

./: .gitignore  AGENTS.md  Cargo.toml  README.ko.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.blueprint/: architecture.md  development-workflow.md  history-and-roadmap.md  product-overview.md  tray-and-settings.md
.github/workflows/: ci.yml  release.yml
crates/qmeter/: Cargo.toml
crates/qmeter-cli/: Cargo.toml
crates/qmeter-cli/src/: main.rs
crates/qmeter-cli/tests/: cli_contract.rs
crates/qmeter-core/: Cargo.toml
crates/qmeter-core/src/: cache.rs  lib.rs  notification_policy.rs  output.rs  scheduler.rs  settings.rs  snapshot.rs  types.rs
crates/qmeter-core/tests/: cache_contract.rs  fixture_snapshot.rs  notification_contract.rs  scheduler_contract.rs  settings_contract.rs  types_contract.rs
crates/qmeter-providers/: Cargo.toml
crates/qmeter-providers/src/: claude.rs  claude_usage.rs  codex.rs  lib.rs  provider.rs  snapshot.rs
crates/qmeter-providers/tests/: claude_provider_contract.rs  claude_usage_contract.rs  codex_contract.rs  live_snapshot_contract.rs
crates/qmeter-tray/: Cargo.toml
crates/qmeter-tray/src/: main.rs  notification_store.rs  popup_main.rs  popup_model.rs  popup_overlay.rs  runtime_log.rs  tray_app.rs  tray_state.rs
crates/qmeter/tests/: cli_contract.rs
docs/superpowers/plans/: 2026-04-28-rust-native-port.md
docs/superpowers/specs/: 2026-04-28-rust-native-port-design.md
scripts/: copy-resources.mjs
src/: cache.ts  cli.ts  main.ts  output.ts  time.ts  types.ts
src/core/: notificationPolicy.ts  notificationState.ts  scheduler.ts  snapshot.ts
src/parsers/: claudeUsage.ts
src/providers/: claudeProvider.ts  codexAppServer.ts  codexProvider.ts  provider.ts
src/tray/: main.ts  notificationStore.ts  preload.ts  runtimeGuard.ts  runtimeTelemetry.ts  settings.ts  smoke.ts
test/: cache.test.ts  claudeProvider.test.ts  claudeUsage.test.ts  notificationPolicy.test.ts  notificationState.test.ts  scheduler.test.ts  trayRuntimeGuard.test.ts  trayRuntimeTelemetry.test.ts
