[package]
name = "qmeter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qmeter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
qmeter-core = { path = "../qmeter-core" }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[lints]
workspace = true
