[package]
name = "qmeter-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "qmeter_providers"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
qmeter-core = { path = "../qmeter-core" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
