[package]
name = "qmeter-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "qmeter-tray"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
qmeter-core = { path = "../qmeter-core" }
qmeter-providers = { path = "../qmeter-providers" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
rfd = "0.15"
tray-icon = "0.21"
windows = { version = "0.62", features = ["Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
